--- a/Code/src/main/resources/application.properties
+++ b/Code/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.jpa.hibernate.ddl-auto=update
 ## Security properties
 spring.security.user.name=admin
 spring.security.user.password=admin
+## Regex configuration for entry data
+regex.email.regexp=^[A-Za-z0-9+_.-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$
+regex.password.regexp=^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%^&+=]).{8,20}$
