--- a/Code/src/main/resources/application.properties
+++ b/Code/src/main/resources/application.properties
@@ -11,7 +11,8 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
-## Hibernate ddl auto (create, create-drop, validate, update)
+## Hibernate properties
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 ## Security properties
 spring.security.user.name=admin
